# tipg-aurora

./: .bumpversion.cfg  .env.example  CONTRIBUTING.md  README.md  pyproject.toml
sql/: dbcatalog.sql
src/: __init__.py  collections.py  database.py  main.py
